test/conformance/chainsaw/mutate/e2e/jmespath-logic/chainsaw-step-03-apply-1-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-policy
spec:
  rules:
  - context:
    - apiCall:
        jmesPath: items[?metadata.name == 'source'].metadata.labels."kyverno.key/copy-me"
          | [0]
        urlPath: /api/v1/namespaces/{{ request.object.metadata.namespace }}/configmaps
      name: labelValue
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            +(kyverno.key/copy-me): '{{ labelValue }}'
    name: gen-role
