test/conformance/chainsaw/mutate/e2e/jmespath-logic/policy-one-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
