test/conformance/chainsaw/mutate/e2e/jmespath-logic/resource-two-mutated.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    kyverno.key/copy-from: source
    kyverno.key/copy-me: sample-value
  name: targettwo
  namespace: mutate-jmespath
