test/conformance/chainsaw/mutate/e2e/jmespath-logic/resource.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: target
  namespace: mutate-jmespath
  labels:
    kyverno.key/copy-from: source
data:
  data.yaml: |
    some: data
