test/conformance/chainsaw/mutate/e2e/jmespath-logic/01-manifests.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: manifests
spec:
  timeouts: {}
  try:
  - apply:
      file: manifests.yaml
  - assert:
      file: policy-one-ready.yaml
