test/conformance/chainsaw/mutate/e2e/jmespath-logic/02-resource-one.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resource-one
spec:
  timeouts: {}
  try:
  - apply:
      file: resource.yaml
  - assert:
      file: resource-mutated.yaml
