test/conformance/chainsaw/mutate/e2e/jmespath-logic/04-resource-two.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resource-two
spec:
  timeouts: {}
  try:
  - apply:
      file: resource-two.yaml
  - assert:
      file: resource-two-mutated.yaml
