test/conformance/chainsaw/mutate/e2e/jmespath-logic/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: jmespath-logic
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: manifests.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: mutate-policy
  - name: step-02
    try:
    - apply:
        file: resource.yaml
    - assert:
        file: resource-mutated.yaml
  - name: step-03
    try:
    - apply:
        file: chainsaw-step-03-apply-1-1.yaml
  - name: step-04
    try:
    - apply:
        file: resource-two.yaml
    - assert:
        file: resource-two-mutated.yaml
